--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,48 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+* {
+  text-transform: capitalize;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  color: var(--primary-color);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+:root {
+  --background-color: #0b0101;
+  --primary-color: #fce8e9;
+  --secondry-color: #1c1d20;
+  --accent-color: #455ce9;
+  --button-color: #e19497;
+  --border-input-color: #455ce9;
+  --input-color: #80868b;
+  --border-color: #333;
+  --normal-font-size: 1rem;
+  --small-font-size: 0.75rem;
+}
+
+section {
+  padding-top: 5rem;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: var(--background-color);
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  .flex-balance {
+    flex: 1 1 80%;
+  }
+
+  .char {
+    transform: translateY(115px);
+    transition: transform 0.5s;
+  }
+
+  .clip-path {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
   }
 }
