--- a/app/_components/header/nav/Footer/style.module.scss
+++ b/app/_components/header/nav/Footer/style.module.scss
@@ -5,7 +5,11 @@
     font-size: 12px;
     gap: 40px;
     cursor: pointer;
+    margin-top: 40px;
     @media (max-width:550px) {
         gap: 0;
+    }
+    @media (min-width:1024px) {
+        font-size: 15px;
     }
 }
