--- a/app/contact/style.module.css
+++ b/app/contact/style.module.css
@@ -47,7 +47,7 @@
 }
 
 .form button {
-  --primary-color: #645bff;
+  --primary-color: #455ce9;
   --secondary-color: #fff;
   --hover-color: #111;
   --arrow-width: 10px;
